[project]
name = "streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "chapter-one",
    "chapter-three",
    "chapter-four/chapter-four",
    "chapter-four",
    "chapter-four/chapter-five",
]
